--- a/dantalaya/index.html
+++ b/dantalaya/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -87,13 +87,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-7 dwel">
-                    <h1>WELCOME TO <b>DANTALAYA</b></h1>
+                    <h1><b>WELCOME TO DANTALAYA</b></h1>
                     <p>
-                        The <b>world's largest network of Dental Practitioners!</b> For the <b>first time</b> in India, Dental Surgeons will come together to address the nation's Dental problems.</p>
+                        The world's largest network of Dental Practitioners!For the first time in India, Dental Surgeons will come together to address the nation's Dental problems.</p>
                     <p>
-                        Dantalaya offers a plethora of services so that no one <b>postpones or ignores</b> Dental treatment! All services at the click of a button! </p>
+                        Dantalaya offers a plethora of services so that no one postpones or ignores Dental treatment! All services at the click of a button! </p>
                     <p>
-                        DANTALAYA AIMS TO PROVIDE TREATMENT TO EVERY INDIVIDUAL IN THE COUNTRY WITHOUT WORRYING ABOUT THE COSTS! </p>
+                        Dantalaya aims to provide treatment to every individual in the country without worrying about the costs!</p>
                     <!--
 
                     <p>
