--- a/dantalaya/search/index.html
+++ b/dantalaya/search/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -32,9 +32,9 @@
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="../patient-profile/">Patient Profile</a></li>
-                    <li><a href="../change/">Change Password</a></li>
+                    <li><a href="../user-profiles/patient/dashboard/">Dashboard</a></li>
+                    <li><a href="../user-profiles/patient/patient-profile/">Patient Profile</a></li>
+                    <li><a href="../user-profiles/patient/changepassword/">Change Password</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Logout</a></li>
                   </ul>
