--- a/dantalaya/surgeonregister/index.html
+++ b/dantalaya/surgeonregister/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid dtop">
             <div class="row">
                 <div class="col-md-8 drightt">
-                    <p class="dtopaddr">+91 99417 61544 - info@dantalaya.com</p>
+                    <p class="dtopaddr">+91 7975422748 - info@dantalaya.com</p>
                 </div>
 
                 <div class="col-md-4">
@@ -356,13 +356,13 @@
                                 <li><a href="#">Specializations</a></li>
                                 <li><a href="#">Quality Policy</a></li>
                                 <li><a href="#">Notice</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="../pdf/privacypolicy.pdf" target="_blank">Privacy Policy</a></li>
                             </ul>
                         </div>
 
                         <div class="col-md-4 dprac">
-                            <p>Phone: +91 9941761544</p>
-                            <p class="dindent">+91 9941761544</p>
+                            <p>Phone: +91 7975422748</p>
+                            
                             <p>Email: info@dantalaya.com</p>
                             <p>Website: www.dantalaya.com</p>
                         </div>
@@ -373,7 +373,7 @@
                     <h1>Dantalaya</h1>
                     <hr class="dfothr">
                     <h4>The Dental Health Company</h4>
-                    <p>C/o Family Dental Clinic</p>
+                    <p>C/o FDC</p>
                     <p>#38/48, I floor, Bazar Street</p>
                     <p>Neelasandra, Bangalore-560047 </p>
                     <p>
