--- a/dantalaya/admin/adminhome/index.html
+++ b/dantalaya/admin/adminhome/index.html
@@ -57,13 +57,12 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">Users Table</div>
 					<div class="panel-body">
-						<table data-toggle="table" data-url="data1.json"  data-show-refresh="true" data-show-toggle="true" data-show-columns="true" data-search="true" data-select-item-name="toolbar1" data-pagination="true" data-sort-name="name" data-sort-order="desc">
+						<table data-toggle="table" data-url="../data1.json"  data-show-refresh="true" data-show-toggle="true" data-show-columns="true" data-search="true" data-select-item-name="toolbar1" data-pagination="true" data-sort-name="name" data-sort-order="desc">
 						    <thead>
 						    <tr>
-						        <th data-field="state" data-checkbox="true" >User ID</th>
-						        <th data-field="id" data-sortable="true">User Name</th>
-						        <th data-field="name"  data-sortable="true">User Position</th>
-						        <th data-field="price" data-sortable="true">User Priority</th>
+						        <th data-field="id" data-checkbox="true" >User ID</th>
+						        <th data-field="name" data-sortable="true">User Name</th>
+						        <th data-field="position"  data-sortable="true">User Position</th>
 						    </tr>
 						    </thead>
 						</table>
