--- a/dantalaya/services/patient/index.html
+++ b/dantalaya/services/patient/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-   <section>
+    <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 dabt">
@@ -80,66 +80,86 @@
                     <div class="row">
                         <img src="../../images/234.png" alt="services">
                     </div>
-                    <div class="dserpad">
-                        <div style="float:right; width:40%; ">
-                            <br/>
-                            <br/>
-                            <br/>
-                            <br/>
-                            <br/>
-                            <a href="../../patientregister/">
-                                <div class="btn btn-block dbtn dbtn1">Register now</div>
-                            </a>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="dserpad">
+                                <ul>
+                                    <li>Do you have a tooth problem?</li>
+                                    <li>Does your <b>child</b> complain about tooth pain?</li>
+                                    <li>Do you need to get your <b>teeth replaced?</b></li>
+                                    <li>Do you have <b>bad breath?</b></li>
+                                    <li><b>Do not know</b> any Dentist in your place?</li>
+                                    <li>Do you think Dental treatment is <b>expensive?</b></li>
+                                    <li>Are you <b>thinking</b> of <b>postponing</b> your Dental appointment?</li>
+                                </ul>
+                                <a href="../../patientregister/">
+                                    <div class="btn btn-block dbtn dbtn1">Register now</div>
+                                </a>  
+                                <p>Please note all prices are for basic materials which are normally used in the clinics. Consult Your Doctor for the latest options available. Prices will vary according to the age of the patient and the Oral status.</p>
+                            </div>                           
+                        </div>
+                        <div class="col-md-6">
+                        <div class="price-list">
+
+                            <p>Dantalaya price list</p>     
+                            <ol>
+                                <li>Scaling (oral prophylaxis) starting at Rs 350/.</li>
+                                <li>Fillings starting at Rs 200/.</li>
+                                <li>RCT starting at Rs 1500/ (includes acrylic crown).</li>
+                                <li>Extractions starting at Rs 200/.</li>
+                                <li>Crowns and bridges starting at Rs1000/unit.</li>
+                                <li>Removable dentures starting at Rs 550/unit.</li>
+                                <li>Full mouth dentures starting at Rs 5500/.</li>
+                                <li>Braces(orthodontic) treatment starting at Rs 750/month.</li>
+                                <li>Teeth whitening starting at Rs 1750/ arch.</li>
+                                <li>Gum surgeries starting at Rs 2500/ arch.</li>
+                                <li>Single tooth implants starting at Rs 22000/.</li>
+                                <li>Full mouth rehabilitation procedures starting at Rs 25000/.</li>
+                                <li>Home visits starting at Rs 350/.</li>
+                                <li>Executive appointments starting at Rs 300/ only.</li>
+                                <li>Immediate dentures starting at Rs 850/.</li>
+                            </ol>                     
+                        </div>
                         </div>
                     </div>
+                        <hr>
                     <div class="dserpad">
+                        <center>
+                            <h2>DANTALAYA has a solution for everything.</h2></center>
                         <ul>
-                            <li>Do you have a tooth problem?</li>
-                            <li>Does your <b>child</b> complain about tooth pain?</li>
-                            <li>Do you need to get your <b>teeth replaced?</b></li>
-                            <li>Do you have <b>bad breath?</b></li>
-                            <li><b>Do not know</b> any Dentist in your place?</li>
-                            <li>Do you think Dental treatment is <b>expensive?</b></li>
-                            <li>Are you <b>thinking</b> of <b>postponing</b> your Dental appointment?</li>
+                            <li>Meet <b>experienced</b> Dental Practitioners for the entire family at the click of a button!</li>
+                            <li> Be it a :Root Canal Procedure, Irregular Teeth, Wisdom Teeth Extraction, Fixed and Removable Dentures, Braces For Children And Adults, Dental Implants, Scaling/Teeth Whitening, Dental Cosmetics, Gum Surgeries</li>
+                            <li><b>All treatments under one roof! </b></li>
                         </ul>
                     </div>
-                <div class="dserpad">
-                    <center>
-                        <h2>DANTALAYA has a solution for everything.</h2></center>
-                    <ul>
-                        <li>Meet <b>experienced</b> Dental Practitioners for the entire family at the click of a button!</li>
-                        <li> Be it a :Root Canal Procedure, Irregular Teeth, Wisdom Teeth Extraction, Fixed and Removable Dentures, Braces For Children And Adults, Dental Implants, Scaling/Teeth Whitening, Dental Cosmetics, Gum Surgeries</li>
-                        <li><b>All treatments under one roof! </b></li>
-                    </ul>
-                </div>
-                <hr class="dabthr">
-                <div class="dserpad">
-                    <center>
-                        <h2> TREATMENT FIRST PAYMENT LATER </h2></center>
-                    <ul>
-                        <li> Dantalaya introduces <b>EMI options for the first in India! </b></li>
-                        <li>Payment methods: credit/debit card, online transfer, cheque and EMI options made easy so that you don't postpone your treatment! </li>
-                        <li>Contact your Doctor for more information about PAYMENTS! </li>
-                    </ul>
-                </div>
-                <hr class="dabthr">
-                <div class="dserpad">
-                    <center>
-                        <h2>UNIFORM TREATMENT PRICES THROUGHOUT INDIA </h2></center>
-                    <ul>
-                        <li>At Dantalaya treatment prices have been made very <b>affordable so that it benefits the general public.</b> </li>
-                        <li>Many people fail to see the Dentist each year, even though regular Dental examinations and good oral hygiene can prevent most Dental Diseases. </li>
-                        <li> Dantalaya will schedule <b>appointments at your convenience!</b></li>
-                        <li> <b>Reminders</b> to visit the Doctor to avoid inconvenience! </li>
-                        <li>Introducing <b>full- mouth rehabilitation</b> programs for the first time!</li>
-                        <li> <b>Executive</b> appointments for the busy professional!</li>
-                        <li>Attractive treatment packages for <b>children</b> and <b>adults</b>!</li>
-                        <li> <b>View</b> your Dental records online!</li>
-                        <li> Receive <b>bills online!</b></li>
-                    </ul>
+                    <hr class="dabthr">
+                    <div class="dserpad">
+                        <center>
+                            <h2> TREATMENT FIRST PAYMENT LATER </h2></center>
+                        <ul>
+                            <li> Dantalaya introduces <b>EMI options for the first in India! </b></li>
+                            <li>Payment methods: credit/debit card, online transfer, cheque and EMI options made easy so that you don't postpone your treatment! </li>
+                            <li>Contact your Doctor for more information about PAYMENTS! </li>
+                        </ul>
+                    </div>
+                    <hr class="dabthr">
+                    <div class="dserpad">
+                        <center>
+                            <h2>UNIFORM TREATMENT PRICES THROUGHOUT INDIA </h2></center>
+                        <ul>
+                            <li>At Dantalaya treatment prices have been made very <b>affordable so that it benefits the general public.</b> </li>
+                            <li>Many people fail to see the Dentist each year, even though regular Dental examinations and good oral hygiene can prevent most Dental Diseases. </li>
+                            <li> Dantalaya will schedule <b>appointments at your convenience!</b></li>
+                            <li> <b>Reminders</b> to visit the Doctor to avoid inconvenience! </li>
+                            <li>Introducing <b>full- mouth rehabilitation</b> programs for the first time!</li>
+                            <li> <b>Executive</b> appointments for the busy professional!</li>
+                            <li>Attractive treatment packages for <b>children</b> and <b>adults</b>!</li>
+                            <li> <b>View</b> your Dental records online!</li>
+                            <li> Receive <b>bills online!</b></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
         <hr class="dabthr">
         <div class="container-fluid">
@@ -197,7 +217,6 @@
                         </div>
                         <div class="col-md-4 dprac">
                             <p>Phone: +91 7975422748</p>
-                            
                             <p>Email: info@dantalaya.com</p>
                             <p>Website: www.dantalaya.com</p>
                         </div>
@@ -228,4 +247,3 @@
     <script src="../../js/jquery.min.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
 </body>
-
